Finalize backend reliability, security, and rollout management updates